--- a/file-append-newline/Cargo.toml
+++ b/file-append-newline/Cargo.toml
@@ -2,9 +2,10 @@
 name = "file-append-newline"
 version = "0.1.0"
 authors = ["Li Lei <this.lilei@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 once_cell = "1.8"
+anyhow = "1.0"
