--- a/cli/crypto/Cargo.toml
+++ b/cli/crypto/Cargo.toml
@@ -9,8 +9,9 @@ version = "0.2"
 default-features = false
 
 [dependencies.clap]
-version = "2.33"
+version = "3.0"
 default-features = false
+features = ["std", "cargo", "derive"]
 
 [dependencies.hex]
 version = "0.4"
