--- a/test/yew/Cargo.toml
+++ b/test/yew/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Li Lei <this.lilei@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-yew = "0.18"
-wasm-bindgen = "0.2"
+yew = "0.19.3"
+gloo-console = "0.2.1"
